[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "gafi-tx"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}

log = {version = "0.4.14", default-features = false}

# Frontier
hex-literal = {version = "0.3.4", optional = true}
pallet-evm = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}

# Substrate
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
pallet-balances = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
scale-info = {version = "2.1.0", default-features = false, features = ["derive"]}
sp-core = {version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-io = {version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-runtime = {version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-std = {version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

# Local
gafi-primitives = {default-features = false, version = "4.0.0-dev", path = "../../primitives"}
gu-convertor = {default-features = false, version = "4.0.0-dev", path = "../../utils/convertor"}

[dev-dependencies]
hex-literal = "0.2.1"

# Frontier
pallet-ethereum = {default-features = false, git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}

# Substrate
pallet-timestamp = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
parity-secp256k1 = {default-features = false, version = "0.7.0", git = "https://github.com/paritytech/rust-secp256k1"}
sp-core = {version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-io = {version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-runtime = {version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

# Local
game-creator = {default-features = false, version = "4.0.0-dev", path = "../game-creator"}
gu-mock = {path = "../../utils/mock"}
proof-address-mapping = {default-features = false, version = "4.0.0-dev", path = "../address-mapping"}
staking-pool = {default-features = false, version = "4.0.0-dev", path = "../staking-pool"}
upfront-pool = {default-features = false, version = "4.0.0-dev", path = "../upfront-pool"}

[features]
default = ["std"]
std = [
  'codec/std',
  'sp-io/std',
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'log/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'gafi-primitives/std',
  'game-creator/std',
  'proof-address-mapping/std',
  'gu-convertor/std',
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "hex-literal"]
try-runtime = ["frame-support/try-runtime"]
