[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Apache-2.0"
name = "gafi-tx"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"]}

log = {version = "0.4.14", default-features = false}

# Frontier
hex-literal = {version = "0.3.4", optional = true}
pallet-evm = { workspace = true }

# Substrate
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
pallet-balances = {workspace = true}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}
sp-core = {workspace = true}
sp-io = {workspace = true}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

# Local
gafi-support = {default-features = false, version = "4.0.0-dev", path = "../../support"}
gu-convertor = {default-features = false, version = "4.0.0-dev", path = "../../utils/convertor"}

[dev-dependencies]
hex-literal = "0.2.1"

# Frontier
pallet-ethereum = { workspace = true }

# Substrate
pallet-timestamp = {workspace = true}
parity-secp256k1 = {default-features = false, version = "0.7.0", git = "https://github.com/paritytech/rust-secp256k1"}
sp-core = {workspace = true}
sp-io = {workspace = true}
sp-runtime = {workspace = true}

# Local
game-creator = {default-features = false, version = "4.0.0-dev", path = "../game-creator"}
gu-mock = {path = "../../utils/mock"}
proof-address-mapping = {default-features = false, version = "4.0.0-dev", path = "../address-mapping"}
staking-pool = {default-features = false, version = "4.0.0-dev", path = "../staking-pool"}
upfront-pool = {default-features = false, version = "4.0.0-dev", path = "../upfront-pool"}

[features]
default = ["std"]
std = [
  'codec/std',
  'sp-core/std',
  'sp-std/std',
  'sp-runtime/std',
  'log/std',
  'scale-info/std',
  'frame-support/std',
  'frame-system/std',
  'pallet-balances/std',
  'pallet-evm/std',
  'gafi-support/std',
  'game-creator/std',
  'proof-address-mapping/std',
  'gu-convertor/std',
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "hex-literal"]
try-runtime = ["frame-support/try-runtime"]
