[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "game-creator"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
scale-info = {version = "2.0.1", default-features = false, features = ["derive"]}

# Frontier
pallet-evm = { workspace = true }

# Substrate
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
pallet-balances = {workspace = true}
pallet-timestamp = {workspace = true}
sp-core = {workspace = true}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

# Local
gafi-primitives = {default-features = false, version = "4.0.0-dev", path = "../../primitives"}

[dev-dependencies]
pallet-ethereum = { workspace = true }
proof-address-mapping = {default-features = false, version = "4.0.0-dev", path = "../address-mapping"}

# Substrate
sp-io = {workspace = true}
gu-mock = { path="../../utils/mock" }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-balances/std",
  "pallet-timestamp/std",
  "pallet-evm/std",
  "sp-std/std",
  "gafi-primitives/std",
  "pallet-ethereum/std",
  "sp-runtime/std",
  "sp-io/std",
  "sp-core/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
