[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "pallet-cache"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
scale-info = {version = "2.0.1", default-features = false, features = ["derive"]}
serde = {version = "1.0.119"}

# Substrate
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
pallet-timestamp = {workspace = true}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

# Local
gafi-primitives = {version = "4.0.0-dev", default-features = false, path = "../../primitives"}

[dev-dependencies]
pallet-balances = {workspace = true}
sp-core = {workspace = true}
sp-io = {workspace = true}
sp-runtime = {workspace = true}

[features]
default = ["std"]
std = [
  "codec/std",
  "serde/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "gafi-primitives/std",
  "pallet-timestamp/std",
  "pallet-balances/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
