[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = {workspace = true}
homepage = {workspace = true}
license = "Unlicense"
name = "pallet-faucet"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"]}
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
scale-info = {version = "2.8.0", default-features = false, features = ["derive"]}
sp-runtime = {workspace = true}
sp-std = {workspace = true}

# Local
gafi-support = {version = "4.0.0-dev", default-features = false, path = "../../support"}
gu-convertor = { default-features = false, version = "4.0.0-dev", path = "../../utils/convertor" }

[dev-dependencies]
pallet-balances = {workspace = true}
pallet-cache = {version = "4.0.0-dev", default-features = false, path = "../pallet-cache"}
sp-core = {workspace = true}
sp-io = { workspace = true, default-features = false}
sp-runtime = {workspace = true}
pallet-timestamp = {workspace = true}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "gu-convertor/std",
  "frame-system/std",
  "sp-runtime/std",
  "pallet-balances/std",
  "sp-std/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
