[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = "2021"
homepage = "https://substrate.io/"
license = "Unlicense"
name = "pallet-player"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
scale-info = {version = "2.1.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true}

frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

# Local
gafi-primitives = { version = "4.0.0-dev", default-features = false, path = "../../primitives" }

[dev-dependencies]
pallet-randomness-collective-flip = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
pallet-balances = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-core = {version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
upfront-pool = { version = "4.0.0-dev", default-features = false, path = "../upfront-pool" }
staking-pool = { version = "4.0.0-dev", default-features = false, path = "../staking-pool" }
gafi-membership = { version = "4.0.0-dev", default-features = false, path = "../gafi-membership" }
gu-mock = { version = "4.0.0-dev", default-features = false, path = "../../utils/mock" }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde/std",
  "sp-io/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-timestamp/std",
  "upfront-pool/std",
  "gafi-membership/std"
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
