[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = {workspace = true}
homepage = {workspace = true}
license = {workspace = true}
name = "pallet-player"
publish = false
repository = "https://github.com/grindytech/gafi"
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"]}
scale-info = {version = "2.5.0", default-features = false, features = ["derive"]}
serde = {version = "1.0.101", optional = true}

frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
sp-io = { workspace = true, default-features = false}
pallet-timestamp = { workspace = true }
sp-runtime = { workspace = true }

# Local
gafi-support = { version = "4.0.0-dev", default-features = false, path = "../../support" }

[dev-dependencies]
pallet-insecure-randomness-collective-flip = {workspace = true}
pallet-balances = {workspace = true}
sp-core = {workspace = true}
sp-io = { workspace = true, default-features = false}
upfront-pool = { version = "4.0.0-dev", default-features = false, path = "../upfront-pool" }
staking-pool = { version = "4.0.0-dev", default-features = false, path = "../staking-pool" }
gu-mock = { version = "4.0.0-dev", default-features = false, path = "../../utils/mock" }

[features]
default = ["std"]
std = [
  "codec/std",
  "serde/std",
  "sp-io/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-timestamp/std",
  "upfront-pool/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
