[package]
name = "pallet-pool-names"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/grindytech/gafi"
description = "Pallet for pool names management"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

# Substrate
frame-benchmarking = {workspace = true, optional = true}
frame-support = {workspace = true}
frame-system = {workspace = true}
sp-runtime = {workspace = true}
sp-io = { workspace = true}
sp-std = {workspace = true}

# Local
gafi-primitives = {version = "4.0.0-dev", default-features = false, path = "../../primitives"}

[dev-dependencies]
pallet-balances = {workspace = true}
sp-core = {workspace = true}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"gafi-primitives/std",
	"sp-io/std",
	"sp-core/std",
	"pallet-balances/std",
	"sp-std/std",
]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
